<resources>
    <string name="app_name">Roler</string>

    <!-- local WebActivity -->
    <string name="html_license">roler_license.html</string>
    <string name="html_all">all.html</string>

    <!-- Schedule Activity -->
    <string name="add_schedule_title">일정 추가 하기</string>
    <string name="add_start_time_title">시작 시간을 선택해주세요</string>
    <string name="add_end_time_title">종료 시간을 선택해주세요</string>
    <string name="set_time_title" formatted="false">\u0020%2d시 %2d분</string>
    <string name="schedule_contents" formatted="false">%1s ~ %2s\n%3s</string>
    <string name="empty_schedule_content">일정에 대한 설명을 입력해 주세요.</string>


    <!--signUpActivity -->
    <string name="join_empty_email">이메일을 입력해주세요.</string>
    <string name="join_too_long_email">이메일 길이를 초과하였습니다.</string>
    <string name="join_invalid_email">이메일 형식이 맞지 않습니다.</string>
    <string name="join_invalid_pwd">비밀번호 형식이 맞지 않습니다.</string>
    <string name="join_empty_pwd">비밀번호를 입력해주세요</string>
    <string name="join_too_short_pwd">비밀번호는 8자리 이상으로 해주세요.</string>
    <string name="already_to_join_email">이미 가입된 이메일 입니다</string>
    <string name="show_pwd">Show</string>
    <string name="hide_pwd">Hide</string>
    <string name="notice_service_0">By tapping to NEXT , you are indication that\u0020</string>
    <string name="notice_service_1"><b>Privacy Policy</b></string>
    <string name="notice_service_2">\u0020and agree to the\u0020</string>
    <string name="notice_service_3"><b>Terms of Service</b></string>
    <string name="welcome_roler_title">안녕하세요!</string>



    <string name="banner_ad_unit_id">ca-app-pub-6734975683573162/7719479339</string>

    //myinfokey
    <string name="key_alias">Roler_KEY</string>

    <string name="invite"> 님 롤러를 사용해주셔서 감사합니다. 잘 사용하셨다면 친구들에게 추천해보세요!
    </string>

    <string name="confirm_internet_connection">인터넷 연결을 확인해 주세요</string>

    <string name="find_pwd">비밀번호 찾기</string>

    <!-- role activity -->
    <string name="add_role_information">역할 추가하기</string>
    <string name="delete_role_information">역할 삭제하기</string>
    <string name="warning_empty_role">역할이 하나도 없습니다</string>

    <!--plan activity-->
    <string name="load_role">로딩 중입니다</string>
    <string name="empty_role">역할을 먼저 추가해보세요!</string>
    <string name="refresh_plan">새로고침 중입니다.</string>
    <!-- role activity -->
    <string name="role_name">%s 님</string>

    <!-- find password -->
    <string name="find_pwd_phone">다음 버전에서 지원할 계획입니다.\n 이메일로 받기를 이용해 주세요.</string>

    <!-- toolbar title collection -->
    <string name="activity_base_toolbar_title">일정관리</string>
    <string name="activity_sign_up_toolbar_title">가입하기</string>
    <string name="activity_plan_toolbar_title">역할보기</string>
    <string name="activity_role_toolbar_title">마이페이지</string>
    <string name="activity_setting_toolbar_title">설정</string>


    <!-- time dialog custom -->
    <!--<string name="select_time_table">\u0020\u0020Click\u0020\u0020</string>-->
    <string name="start_time_title">시작 시간\u0020\u0020:</string>
    <string name="select_time_table">\u0020\u0020선택해보세요\u0020\u0020</string>
    <string name="end_time_title">종료 시간\u0020\u0020:</string>
    <string name="schedule_contents_title">일정에 대한 설명을 입력해 주세요.</string>

    <!-- loading dialog -->
    <string name="loading_dialog_title">LOADING</string>

    <!-- SIMPLE DATE FORMAT -->
    <string name="add_schedule_date_format">HH:mm</string>
    <string name="add_schedule_date">HH:mm:ss</string>

    <!-- Today Date Format-->
    <string name="today_data_format">yyyy-MM-dd</string>

    <!-- alert dialog -->
    <string name="positive_title">확인</string>
    <string name="negative_title">취소</string>
    
    <!-- Profile Activity -->
    
    <string name="develop_position_title">개발 분야 :\u0020</string>
    <string name="hyunsung_develop_position_contents">클라이언트 개발</string>
    <string name="sangbeen_develop_position_contents">서버 개발</string>
    <string name="university_title">학교 :\u0020</string>
    <string name="university">인천대학교 컴퓨터공학과 졸업</string>
    <string name="job_title">직업 :\u0020</string>
    <string name="hs_job_content">백수(취업하고 싶어요 ^ㅠ^)</string>
    <string name="sb_job_content">하나 아이엔에스 교육생</string>
    <string name="hobby_title">취미 :\u0020</string>
    <string name="hs_hobby_content">피아노 연주, 개인 블로그(클릭시 이동합니다.)</string>
    <string name="sb_hobby_content">야구 보기, 기술 블로그(클릭시 이동합니다.)</string>
    <string name="vocketlist_title">자매품 :\u0020</string>
    <string name="vocketlist_contents">나만의 봉사 큐레이터 봉봉봉 (클릭시 이동합니다.)</string>
    <string name="vocketlist_url">https://play.google.com/apps/testing/com.vocketlist.android</string>
    <string name="hs_blog_url">http://nanamare.tistory.com/</string>


    <!-- network service -->
    <string name="not_working_server">서버에 문제가 있습니다.</string>
    <string name="check_user_info">이메일 또는 비밀번호를 확인해주세요</string>
    <string name="login_success">로그인 완료</string>
    <string name="impossible_sign_up">가입 불가</string>

    <!-- preference -->
    <string name="IS_LOGIN_KEY">isLoggedIn</string>

    <!-- hamberger menu -->
    <string name="menu_refresh">새로고침</string>
    <string name="menu_options">설정</string>

    <!-- todo dialog -->
    <string name="dialog_todo_title">TODO-LIST 추가하기</string>
    <string name="dialog_todo_content">내용을 입력해주세요</string>
    <string name="dialog_todo_edit_contents">목표를 달성하는 당신, 화이팅!</string>

    <!-- login activity-->
    <string name="sign_in_btn">로그인</string>
    <string name="sign_up_btn">가입하기</string>
    <string name="dialog_log_out_token">토큰 만료\n다시 로그인 해주세요.</string>

    <!-- edit role -->
    <string name="priority_title">우선 순위 설정</string>
    <string name="priority_title_btn">우선순위를 설정해주세요!</string>
    <string name="role_title">목표 제목 설정</string>
    <string name="role_title_hint">목표를 설정해보세요!</string>
    <string name="goal_title">단기 목표 설명</string>
    <string name="goal_title_hint">목표에 대한 설명을 적어 보세요!</string>
    <string name="done_title">추가하기</string>

</resources>
