<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.buttering.roler.setting.ProfileActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/custom_toolBar"
            layout="@layout/toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <!-- 콘텐츠 -->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:weightSum="5"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <LinearLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/hs_pic"
                        android:layout_width="130dp"
                        android:layout_height="130dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:text="@string/develop_position_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <android.support.v7.widget.AppCompatTextView
                            android:text="@string/hyunsung_develop_position_contents"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/university_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/university"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>



                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/job_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/hs_job_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/hobby_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/hs_hobby_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


            </LinearLayout>

            <!-- sangbeen -->

            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <LinearLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:src="@drawable/sb_pic"
                        android:layout_width="130dp"
                        android:layout_height="130dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.v7.widget.AppCompatTextView
                            android:text="@string/develop_position_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                        <android.support.v7.widget.AppCompatTextView
                            android:text="@string/sangbeen_develop_position_contents"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </LinearLayout>


                </LinearLayout>


                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/university_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/university"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>



                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/job_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/sb_job_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/hobby_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                    <android.support.v7.widget.AppCompatTextView
                        android:text="@string/sb_hobby_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/vocketlist_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


                <android.support.v7.widget.AppCompatTextView
                    android:text="@string/vocketlist_contents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>



        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
