<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="15dp"
              android:paddingLeft="15dp"
              android:paddingRight="15dp"
              android:paddingTop="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_time_title"
            android:textSize="18sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dialog_startTime_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/select_time_table"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_time_title"
            android:textSize="18sp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dialog_endTime_edt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/select_time_table"
            android:textSize="18sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schedule_contents_title"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="left">

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/dialog_time_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>